* All IsExist->Exist

--- a/trunk/Source/WebUI/Views/Cryptography/Hash.cshtml
+++ b/trunk/Source/WebUI/Views/Cryptography/Hash.cshtml
@@ -19,7 +19,7 @@
     </div>
     <div class="row">
         <div class="col-md-8">
-            <button type="submit" class="btn btn-primary btn-lg" style="float: right; margin-top: 20px">Вычислить</button>
+            <button type="submit" class="btn btn-primary btn-lg" style="float: right; margin: 20px 0">Вычислить</button>
         </div>
     </div>
 }
