--- a/trunk/Source/WebUI/Views/Cryptography/SignHash.cshtml
+++ b/trunk/Source/WebUI/Views/Cryptography/SignHash.cshtml
@@ -18,8 +18,8 @@
         <div class="col-md-2">
             <h4>Текст</h4>
         </div>
-        <div class="col-md-8">
-            <h4>
+        <div class="col-md-10">
+            <h4 style="word-wrap: break-word;">
                 @Html.DisplayTextFor(x => x.Text)
             </h4>
         </div>
@@ -28,15 +28,15 @@
         <div class="col-md-2">
             <h4>Хеш</h4>
         </div>
-        <div class="col-md-8">
-            <h4>
+        <div class="col-md-10">
+            <h4 style="word-wrap: break-word;">
                 @Html.DisplayTextFor(x => x.Hash)
             </h4>
         </div>
     </div>
     <div class="row">
         <div class="col-md-12">
-            <button type="submit" class="btn btn-primary btn-lg" style="float: right; margin-top: 20px">Подписать хеш</button>
+            <button type="submit" class="btn btn-primary btn-lg" style="float: right; margin: 20px 0">Подписать хеш</button>
         </div>
     </div>
 }
