--- a/trunk/Source/WebUI/Views/Cryptography/VerifySignature.cshtml
+++ b/trunk/Source/WebUI/Views/Cryptography/VerifySignature.cshtml
@@ -19,8 +19,8 @@
         <div class="col-md-2">
             <h4>Текст</h4>
         </div>
-        <div class="col-md-8">
-            <h4>
+        <div class="col-md-10">
+            <h4 style="word-wrap: break-word;">
                 @Html.DisplayTextFor(x => x.Text)
             </h4>
         </div>
@@ -29,8 +29,8 @@
         <div class="col-md-2">
             <h4>Хеш</h4>
         </div>
-        <div class="col-md-8">
-            <h4>
+        <div class="col-md-10">
+            <h4 style="word-wrap: break-word;">
                 @Html.DisplayTextFor(x => x.Hash)
             </h4>
         </div>
@@ -39,7 +39,7 @@
         <div class="col-md-2">
             <h4>Открытый ключ</h4>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-10">
             <h4 style="word-wrap: break-word;">
                 @Html.DisplayTextFor(x => x.PublicKey)
             </h4>
@@ -49,8 +49,8 @@
         <div class="col-md-2">
             <h4>Подпись</h4>
         </div>
-        <div class="col-md-8">
-            <h4>
+        <div class="col-md-10">
+            <h4 style="word-wrap: break-word;">
                 @Html.DisplayTextFor(x => x.Signature)
             </h4>
         </div>
@@ -67,7 +67,7 @@
             <h4 style="color: red;">Подпись некорректна!</h4>
         </div>
         <div class="col-md-12">
-            <button type="submit" class="btn btn-primary btn-lg" style="float: right; margin-top: 20px">Проверить подпись</button>
+            <button type="submit" class="btn btn-primary btn-lg" style="float: right; margin: 20px 0">Проверить подпись</button>
         </div>
     </div>
 }
