--- a/trunk/Source/WebUI/Views/Cryptography/Hash.cshtml
+++ b/trunk/Source/WebUI/Views/Cryptography/Hash.cshtml
@@ -8,6 +8,8 @@
 @using (Html.BeginForm("Hash", "Cryptography", FormMethod.Post, new { id = "hashForm" }))
 {
     @Html.HiddenFor(x => x.Hash)
+    @Html.HiddenFor(x => x.HashHex)
+    
     <div class="page-header">
         <h1>Вычисление хеша</h1>
     </div>
@@ -31,6 +33,8 @@
             var service = new ShellmaServiceProvider();
             var hash = service.ComputeHash(text);
             $('#Hash').val(hash);
+            var hashHex = service.ConvertToHex(hash);
+            $('#HashHex').val(hashHex);
         });
     });
 </script>
